[metadata]
name = newcon
version = attr: newcon.__version__
author_email = Scott K Logan <logans@cottsay.net>
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
license = Apache License, Version 2.0
description = A prototype tool built on colcon-core
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
install_requires =
    colcon-core
packages = find:
zip_safe = false

[options.extras_require]
test =
    pytest

[options.packages.find]
exclude =
    test
    test.*

[tool:pytest]
junit_suite_name = newcon
markers =
    flake8
    linter

[options.entry_points]
console_scripts =
    newcon = newcon.command:main
newcon.environment_variable =
    extension_blocklist = colcon_core.extension_point:EXTENSION_BLOCKLIST_ENVIRONMENT_VARIABLE
    home = newcon.command:HOME_ENVIRONMENT_VARIABLE
    log_level = newcon.command:LOG_LEVEL_ENVIRONMENT_VARIABLE

[flake8]
extend_ignore =
    D100
    D104
import-order-style = google
per-file-ignores =
    test/**: D101,D102,D103,D104,D105,D107
show_source = true

[coverage:run]
source = newcon
